Fix routing issue with DigitalOcean

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <!-- ============= Navigation ============= -->
         <header class="nav">
             <div><a href="" data-active="true">Home</a></div>
-            <div><a href="views/todos">Todos</a></div>
-            <div><a href="views/setting">Setting</a></div>
+            <div><a href="views/todos/index.html">Todos</a></div>
+            <div><a href="views/setting/index.html">Setting</a></div>
         </header>
 
         <!-- ============= Main Content ============= -->
